# Learning

./: githash远程到linux服务器.docx  github常用命令.docx  ~$thub常用命令.docx  学习计划.docx  开发版流应用软件经验.docx
ACE学习笔记/: ACE学习笔记.doc
Boost学习笔记/: Boost编译和安装说明.docx
C++基础知识/: C++学习笔记.docx  C++疑难杂症.docx  C++规范_陈总.docx  Visual Studio调试dump文件(WindowsC C++).doc
C++基础知识/demo/: 对象工场模式例子练习.cpp
Cmake学习笔记/: Cmake学习笔记 (2).docx  Cmake学习笔记.docx
Cmake学习笔记/Cmake学习/src/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
Cmake学习笔记/Cmake学习/src/MathFunctions/: CMakeLists.txt  MakeTable.cxx  mysqrt.cxx  mysqrt.h
Cmake学习笔记/Cmake实例/MultiOrganRender/: CMakeLists.txt  main.cpp  moc_mywidget.cpp  moc_viewimage.cpp  mywidget.cpp  mywidget.h  ui_viewallwidget.h  ui_viewimage.h  viewImage工程介绍.txt  viewallwidget.cpp  viewallwidget.css  viewallwidget.h  viewallwidget.qss  viewallwidget.ui  viewimage.cpp  viewimage.h  viewimage.ini  viewimage.ui
Dicom学习笔记/: DICOM学习笔记——DICOM网络传输.docx  Dicom文件解析笔记.docx  dcmtk程序包简介.docx  dicom01.docx
Dicom学习笔记/DCMTK学习笔记/: DCMTK学习——Demo演示.docx  DCMTK学习——Pacs调试.docx  ct-compressed.dcm  ct.dcm  dcmqrscp.cfg
Dicom学习笔记/Dicom标准/: cpart02.doc  cpart03.doc  cpart04.doc  cpart05.doc  cpart06.doc  cpart07.doc  cpart08.doc  part06.docx  第八部分：信息交换的网络通讯支持.doc  第十二部分.doc  第十五章.doc  第十四部分：灰度标准显示函数.doc  第十部分.doc
ELASTIX学习笔记/: Cmake编译ELASTIX 笔记记录.docx
ITK_Snap/: ITK-SNAP学习笔记.docx  ITK_SNAP编译时报错.ppt  VS2012编译ITK_SNAP时报的错.txt
ITK学习笔记/: ITK学习笔记.docx  Win10 64位上安装ITK.docx
NSSi了解/: MIISCommon.nsi  Version.nsi
OpenCV学习笔记/: OpenCV学习笔记.docx  文档切分.docx
PDF读取文档库学习笔记/: Cario安装.docx
Qt学习笔记/: Qt学习笔记.txt  qt学习笔记.docx  qt学习笔记.pptx  ~$qt学习笔记.docx  ~WRL0003.tmp
Svn学习笔记/: SVN学习笔记——分支合并.doc
Tensorflow学习笔记/: Anaconda下TensorFlow的安装.docx  Linux系统下创建python虚拟环境.docx  python学习笔记.docx  深度学习的几个问题.docx  深度学习相关资料.docx
VS编译器/: VS编译器基础知识.docx
VTK学习笔记/: VTK学习笔记.docx  编译配置 VTK64位和ITK64位以及Qt64位.docx
Windows和MFC学习笔记/: MFC单文档创建过程.doc
优秀论坛网友/: 论坛网友.docx
图像算法/: 肺部图像配准算法.docx
深度学习/: CNN卷积神经网络详解 .docx  Yolov3_darknet 本地安装配置.docx  githash远程到linux服务器.docx  keras学习笔记.doc  tensorflow学习笔记.doc  ~$N卷积神经网络详解 .docx  ~$智能相关的大赛.docx  人工智能相关的大赛.docx  学习笔记.docx  深度学习笔记.docx  验证二进制读取.doc
深度学习/BP神经网络/BP神经网络MATLAB实现/BP/: BP_predict.m  BP_predict2.m  BP_tranning.m  create_theta.m  create_w.m  demo.m  demo_2class.m  demo_3class.m  demo_4class.m  four_class.mat  sigmoid.m  three_class.mat  two_class.mat
深度学习/BP神经网络/BP神经网络MATLAB实现/BP_Learn/: BP_predict.m  BP_predict2.m  BP_tranning.asv  BP_tranning.m  compare_bp_toolbox.asv  compare_bp_toolbox.m  create_theta.m  create_w.m  demo_4class.m  (+2 more)
项目资料/: OCT眼底视网膜分层_汪雄_03.30 - 副本.pptx
